fix css spacing

--- a/packages/better-react-tagsinput/styles/tagsinput.css
+++ b/packages/better-react-tagsinput/styles/tagsinput.css
@@ -1,8 +1,9 @@
 .tagsinput {
   border: 1px solid #ededed;
-  padding: 5px 5px 0 5px;
+  padding: 3px;
 }
 
 .tagsinput--focused {
   border-color: black;
 }
+
